<resources>
    <string name="app_name">My Application10_7</string>
    <string name="enter_pin">Введите код</string>
    <string name="btn_pin_0">0</string>
    <string name="btn_pin_1">1</string>
    <string name="btn_pin_2">2</string>
    <string name="btn_pin_3">3</string>
    <string name="btn_pin_4">4</string>
    <string name="btn_pin_5">5</string>
    <string name="btn_pin_6">6</string>
    <string name="btn_pin_7">7</string>
    <string name="btn_pin_8">8</string>
    <string name="btn_pin_9">9</string>
    <string name="btn_pin_clear">C</string>
    <string name="btn_pin_ok">OK</string>
    <string name="second_activity">Second activity</string>
    <string name="btn_share">Поделиться</string>
    <string name="btn_send_by_mail">Отправить по почте</string>
    <string name="btn_call">Позвонить</string>
    <string name="btn_open_camera">Запустить камеру</string>
</resources>