<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_enter_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_pin" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pin">

        <TableRow>

            <Button
                android:id="@+id/btn_pin_1"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_1" />

            <Button
                android:id="@+id/btn_pin_2"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_2" />

            <Button
                android:id="@+id/btn_pin_3"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_3" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_pin_4"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_4" />

            <Button
                android:id="@+id/btn_pin_5"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_5" />

            <Button
                android:id="@+id/btn_pin_6"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_6" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_pin_7"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_7" />

            <Button
                android:id="@+id/btn_pin_8"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_8" />

            <Button
                android:id="@+id/btn_pin_9"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_9" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_clear"
                style="@style/ButtonPin"
                android:onClick="removeLastChar"
                android:text="@string/btn_pin_clear" />

            <Button
                android:id="@+id/btn_pin_0"
                style="@style/ButtonNumber"
                android:text="@string/btn_pin_0" />

            <Button
                style="@style/ButtonPin"
                android:onClick="checkPin"
                android:text="@string/btn_pin_ok"
                android:background="@drawable/btn_ok_bg_color"
                app:backgroundTint="@null"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>