<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <Button
        style="@style/ButtonPin"
        android:onClick="share"
        android:text="@string/btn_share" />

    <Button
        style="@style/ButtonPin"
        android:onClick="sendByMail"
        android:text="@string/btn_send_by_mail" />

    <Button
        style="@style/ButtonPin"
        android:onClick="call"
        android:text="@string/btn_call" />

    <Button
        style="@style/ButtonPin"
        android:onClick="openCamera"
        android:text="@string/btn_open_camera" />
</LinearLayout>